Correção no input id e type

--- a/pagina.html
+++ b/pagina.html
@@ -11,13 +11,13 @@
 	<h1>Formulários</h1>
 	<form>
 		<label for=”text”>Seu nome</label>
-		<input type=”text” placeholder=”Seu nome” />
+		<input id="name" type=”text” placeholder="Nome" />
 		<br />
 		<label for=”email”>Seu e-mail</label>
-		<input id=”email” type=”email” />
+		<input id=”email” type="email" placeholder="E-mail"/>
 		<br />
-		<label for=”Senha”>”Senha”</label>
-		<input type=”senha” placeholder=”Senha” />
+		<label for=”Senha”>Senha</label>
+		<input id="pass" type="password" placeholder="Senha" />
 		<br />
 		<button type=”submit”>
 			Cadastrar
