--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             </ul>
         </nav>
     </header>
-    <section>
+    <section id="sports">
         <h2>Esportes</h2>
         <article>
             <img src="./imagens/futebol.jpg" alt="Bola de futebol no gramado" />
             <header>
-                <time> class="creation-date" 13/07/2022 às 12:35</time>
+                <time class="creation-date"> 13/07/2022 às 12:35</time>
             </header>
             <h3>Grande clássico na noite de hoje</h3>
             <p>
