--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <h2>Tecnologia</h2>
             <div class="articles">
                 <article>
-                    <img src="#" alt="#" />
+                    <img src="./imagens/avanços.jpg" alt="Robo manuseando um painel" />
                     <header>
                         <time>13/07/2022 às 12:35</time>
                     </header>
@@ -140,7 +140,7 @@
                     <a href="#" title="Leia a notícia completa">Ler mais</a>
                 </article>
                 <article>
-                    <img src="#" alt="#" />
+                    <img src="./imagens/espectativas.jpg" alt="Reunião em uma mesa" />
                     <header>
                         <time>13/07/2022 às 12:35</time>
                     </header>
@@ -151,7 +151,7 @@
                     <a href="#" title="Leia a notícia completa">Ler mais</a>
                 </article>
                 <article>
-                    <img src="#" alt="#" />
+                    <img src="./imagens/acessibilidade.jpeg" alt="Criança diante de varias possibilidades para superar barreiras." />
                     <header>
                         <time>13/07/2022 às 12:35</time>
                     </header>
