--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <h2>Entretenimento</h2>
             <div class="articles">
                 <article>
-                    <img src="#" alt="#" />
+                    <img src="./imagens/netflix.jpg" alt="Logo da Netflix" />
                     <header>
                         <time>13/07/2022 às 12:35</time>
                     </header>
@@ -180,7 +180,7 @@
                     <a href="#" title="Leia a notícia completa">Ler mais</a>
                 </article>
                 <article>
-                    <img src="#" alt="#" />
+                    <img src="./imagens/filmes.jpg" alt="Filmes de sucesso" />
                     <header>
                         <time>13/07/2022 às 12:35</time>
                     </header>
@@ -191,11 +191,11 @@
                     <a href="#" title="Leia a notícia completa">Ler mais</a>
                 </article>
                 <article>
-                    <img src="#" alt="#" />
+                    <img src="./imagens/elite.jpg" alt="Anitta" />
                     <header>
                         <time>13/07/2022 às 12:35</time>
                     </header>
-                    <h3>Elite com participação em Elite.</h3>
+                    <h3>Elite com participação de Anitta.</h3>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
                     </p>
