--- a/Game Shop/index.html
+++ b/Game Shop/index.html
@@ -4,20 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Games Shop - A sua loja de games</title>
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
     <header>
-        <h1>Games Shop</h1>
-        <nav>
-            <ul>
-                <li>
-                    <a href="#">Sobre a loja</a>
-                </li>
-                <li>
-                    <a href="#">Contato</a>
-                </li>
-            </ul>
-        </nav>
+        <div class="container">
+            <h1>Games Shop</h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">Sobre a loja</a>
+                    </li>
+                    <li>
+                        <a href="#">Contato</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
+    <section>
+        <div class="container">
+            <img src="./images/loja.jpg" alt="Fachada da loja Game Shop">
+            <div>
+                <h2>SObre a loja</h2>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
