--- a/Game Shop/index.html
+++ b/Game Shop/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Games Shop - A sua loja de games</title>
     <link rel="stylesheet" href="./main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -24,9 +27,60 @@
     </header>
     <section>
         <div class="container">
-            <img src="./images/loja.jpg" alt="Fachada da loja Game Shop">
+            <img class="store-front" src="./images/loja.jpg" alt="Fachada da loja Game Shop">
             <div>
-                <h2>SObre a loja</h2>
+                <h2>Sobre a loja</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, ducimus. Libero repudiandae officiis esse quae perspiciatis perferendis possimus voluptatibus nam dignissimos, officia nihil ad iusto rem veniam? Beatae, commodi repellendus!
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto illum vel, a hic, voluptatibus ipsa similique incidunt soluta consequuntur earum ratione architecto repudiandae corporis, inventore ut eligendi quo et rerum.
+                </p>
+                <ul class="brands-list">
+                    <img src="./images/nintendo.png" alt="Nitendo">
+                    <img src="./images/xbox.png" alt="xbox">
+                    <img src="./images/playstation.png" alt="playstation">
+                </ul>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <h2>Contato</h2>
+            <div>
+                <div>
+                    <h3>Fake conosco</h3>
+                    <form>
+                        <input type="text" placeholder="Seu nome">
+                        <input type="email" placeholder="Seu e-mail">
+                        <input type="tel" placeholder="Seu telefone (Opcional)">
+                        <textarea placeholder="Sua mensagem"></textarea>
+                        <button type="submit">Enviar</button>
+                    </form>
+                </div>
+                <div>
+                    <h3>Nos acompanhe</h3>
+                    <ul>
+                        <li>
+                            <a href="#" title="Siga-nos no instagran"></a>
+                            <img src="./images/instagram.png" alt="Logo do instagram" />
+                        </li>
+                        <li>
+                            <a href="#" title="Siga-nos no facebook"></a>
+                            <img src="./images/facebook.png" alt="Logo do facebook" />
+                        </li>
+                        <li>
+                            <a href="#" title="Siga-nos no youtube"></a>
+                            <img src="./images/youtube.png" alt="Logo do youtube" />
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>Venha até nós</h3>
+                    <p>
+                        Rua JavaScript n° 124, Vila HTML - São Paulo - SP
+                    </p>
+                </div>
             </div>
         </div>
     </section>
