--- a/Game Shop/index.html
+++ b/Game Shop/index.html
@@ -16,16 +16,16 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#">Sobre a loja</a>
+                        <a href="#about">Sobre a loja</a>
                     </li>
                     <li>
-                        <a href="#">Contato</a>
+                        <a href="#contact">Contato</a>
                     </li>
                 </ul>
             </nav>
         </div>
     </header>
-    <section>
+    <section id="about">
         <div class="container">
             <img class="store-front" src="./images/loja.jpg" alt="Fachada da loja Game Shop">
             <div>
@@ -44,23 +44,23 @@
             </div>
         </div>
     </section>
-    <section>
+    <section id="contact">
         <div class="container">
             <h2>Contato</h2>
-            <div>
+            <div class="contact-methods">
                 <div>
                     <h3>Fake conosco</h3>
                     <form>
-                        <input type="text" placeholder="Seu nome">
-                        <input type="email" placeholder="Seu e-mail">
+                        <input type="text" placeholder="Seu nome" required>
+                        <input type="email" placeholder="Seu e-mail" required>
                         <input type="tel" placeholder="Seu telefone (Opcional)">
                         <textarea placeholder="Sua mensagem"></textarea>
-                        <button type="submit">Enviar</button>
+                        <button type="submit" required>Enviar</button>
                     </form>
                 </div>
                 <div>
                     <h3>Nos acompanhe</h3>
-                    <ul>
+                    <ul class="social-links">
                         <li>
                             <a href="#" title="Siga-nos no instagran"></a>
                             <img src="./images/instagram.png" alt="Logo do instagram" />
@@ -84,5 +84,12 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="container">
+            <p>
+                &copy; Games Shop - Todos os direitos reservados - 2023
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
